--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=ATTINY Oled Driver for SH1106 display
 version=0.0.1
 author=Sam Lewis
 maintainer=Sam Lewis
-url=sam.lewis1417@gmail.com
+url=https://github.com/samlewis02/SH1106mini
 sentence=A display driver for SH1106 oled displays connected to ATTINY
 paragraph=A display driver for SH1106 oled displays connected to ATTINY
 category=Display
